tests/lean/noTabs.lean
#guard_msgs (drop error) in
#check
  let a := 1
	let b := 2
  a + b
